intermediate revision - refactored code, updated selenium driver standalone jar version